force-app/main/default/objects/Health_Score_Configuration__c/Health_Score_Configuration__c.object-meta.xml
<CustomObject>
    <description>Defines scoring parameters, thresholds, and component weights for deal health scoring.</description>
    <label>Health Score Configuration</label>
    <nameField><label>Health Score Configuration Name</label><type>Text</type></nameField>
    <pluralLabel>Health Score Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>