force-app/main/default/objects/Health_Score_Configuration__c/fields/Competitor_Field__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Field__c</fullName>
    <label>Competitor Field</label>
    <type>Text</type>
    <length>100</length>
</CustomField>