force-app/main/default/objects/Health_Score_Configuration__c/fields/Competitor_Object__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Object__c</fullName>
    <description>Custom competitor object API name</description>
    <label>Competitor Object</label>
    <type>Text</type>
    <length>100</length>
</CustomField>