force-app/main/default/objects/Health_Score_Configuration__c/fields/Competitor_Opp_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Opp_Lookup_Field__c</fullName>
    <description>Lookup field on competitor object to Opportunity</description>
    <label>Competitor Opp Lookup Field</label>
    <type>Text</type>
    <length>100</length>
</CustomField>