force-app/main/default/objects/Health_Score_Configuration__c/fields/Competitor_Source__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Source__c</fullName>
    <label>Competitor Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Standard_Competitor</fullName><default>false</default><label>Standard_Competitor</label></value>
            <value><fullName>Custom_Object</fullName><default>false</default><label>Custom_Object</label></value>
            <value><fullName>Custom_Field</fullName><default>false</default><label>Custom_Field</label></value>
            <value><fullName>CI_Adapter</fullName><default>false</default><label>CI_Adapter</label></value>
            <value><fullName>Multiple</fullName><default>false</default><label>Multiple</label></value>
            <value><fullName>None</fullName><default>false</default><label>None</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>