force-app/main/default/objects/Health_Score_Configuration__c/fields/Conflict_Alert_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Alert_Enabled__c</fullName>
    <label>Conflict Alert Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>