force-app/main/default/objects/Health_Score_Configuration__c/fields/Conflict_Score_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Score_Threshold__c</fullName>
    <description>Below this triggers conflict alert. Default 40</description>
    <label>Conflict Score Threshold</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>