force-app/main/default/objects/Health_Score_Configuration__c/fields/DM_Identification_Field__c.field-meta.xml
<CustomField>
    <fullName>DM_Identification_Field__c</fullName>
    <label>DM Identification Field</label>
    <type>Text</type>
    <length>100</length>
</CustomField>