force-app/main/default/objects/Health_Score_Configuration__c/fields/DM_Identification_Method__c.field-meta.xml
<CustomField>
    <fullName>DM_Identification_Method__c</fullName>
    <label>DM Identification Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Contact_Role</fullName><default>false</default><label>Contact_Role</label></value>
            <value><fullName>Custom_Opp_Field</fullName><default>false</default><label>Custom_Opp_Field</label></value>
            <value><fullName>Contact_Title</fullName><default>false</default><label>Contact_Title</label></value>
            <value><fullName>None</fullName><default>false</default><label>None</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>