force-app/main/default/objects/Health_Score_Configuration__c/fields/Green_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Green_Threshold__c</fullName>
    <description>Score >= this = healthy. Default 70</description>
    <label>Green Threshold</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>