force-app/main/default/objects/Health_Score_Configuration__c/fields/History_Retention_Years__c.field-meta.xml
<CustomField>
    <fullName>History_Retention_Years__c</fullName>
    <description>Default 2</description>
    <label>History Retention Years</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>