force-app/main/default/objects/Health_Score_Configuration__c/fields/Pipeline_Object__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Object__c</fullName>
    <description>Default: Opportunity</description>
    <label>Pipeline Object</label>
    <type>Text</type>
    <length>100</length>
</CustomField>