force-app/main/default/objects/Health_Score_Configuration__c/fields/Recalc_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Recalc_Frequency__c</fullName>
    <label>Recalc Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Realtime</fullName><default>false</default><label>Realtime</label></value>
            <value><fullName>Hourly</fullName><default>false</default><label>Hourly</label></value>
            <value><fullName>Daily_Batch</fullName><default>false</default><label>Daily_Batch</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>