force-app/main/default/objects/Health_Score_Configuration__c/fields/Score_Range_Max__c.field-meta.xml
<CustomField>
    <fullName>Score_Range_Max__c</fullName>
    <description>Always 100</description>
    <label>Score Range Max</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>