force-app/main/default/objects/Health_Score_Configuration__c/fields/Smoothing_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Smoothing_Window_Days__c</fullName>
    <description>Rolling average window. Default 7</description>
    <label>Smoothing Window Days</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>