force-app/main/default/objects/Health_Score_Configuration__c/fields/Yellow_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Yellow_Threshold__c</fullName>
    <description>Score >= this and &lt; Green = at risk. Default 40</description>
    <label>Yellow Threshold</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>